--- a/source/test.html
+++ b/source/test.html
@@ -38,12 +38,12 @@
 
     <div class="main-container__wrapp">
       <label class="main-container__label" for="num">Количество билетов</label>
-      <input class="main-container__input" type="text" id="num">
-      <button class="main-container__button button" type="button">Посчитать</button>
+      <input class="main-container__input" type="number" id="num">
+      <button class="main-container__button button" type="submit">Посчитать</button>
     </div>
   </form>
 </main>
 
-<script src="js/script.js"></script>
+<script src="js/travel-calc.js"></script>
 </body>
 </html>
