--- a/source/index.html
+++ b/source/index.html
@@ -43,24 +43,6 @@
               <li class="qualities__item qualities__item--time">
                 <span class="qualities__start-tour">12:00</span>
               </li>
-              <li class="qualities__item qualities__item--time">
-                <span class="qualities__start-tour">12:00</span>
-              </li>
-              <li class="qualities__item qualities__item--time">
-                <span class="qualities__start-tour">12:00</span>
-              </li>
-              <li class="qualities__item qualities__item--time">
-                <span class="qualities__start-tour">12:00</span>
-              </li>
-              <li class="qualities__item qualities__item--time">
-                <span class="qualities__start-tour">12:00</span>
-              </li>
-              <li class="qualities__item qualities__item--time">
-                <span class="qualities__start-tour">12:00</span>
-              </li>
-              <li class="qualities__item qualities__item--time">
-                <span class="qualities__start-tour">12:00</span>
-              </li>
             </ul>
           </li>
         </ul>
@@ -97,9 +79,6 @@
           <li class="qualities__item qualities__item--time-tour">
             <span class="qualities__text">Ближайший рейс сегодня</span>
             <ul class="qualities__list">
-              <li class="qualities__item qualities__item--time">
-                <span class="qualities__start-tour">12:00</span>
-              </li>
               <li class="qualities__item qualities__item--time">
                 <span class="qualities__start-tour">12:00</span>
               </li>
@@ -171,7 +150,7 @@
             <span class="events__price-main">900</span>
             <span class="events__price-secondary">1200 р на причале</span>
           </p>
-          <a href="" class="events__button button">Подробнее</a>
+          <a class="events__button button" href="#" >Подробнее</a>
         </div>
       </div>
     </li>
